<resources>

    <!-- Common start -->
    <string name="app_name">AndroidDemos</string>
    <string name="common_submit_txt">提交</string>
    <!-- Common end -->

    <!-- Main start -->
    <string name="menu_go_home">返回主页</string>
    <string name="menu_first_load">设为首加载</string>
    <string name="menu_clear_first">清除首加载</string>
    <string name="msg_set_first_load_success">设置首加载成功</string>
    <string name="msg_clear_first_load_success">清除首加载成功</string>
    <!-- Main end -->

    <!-- Sample Demo start -->
    <string name="sample_demo_name">示例</string>
    <string name="sample_describe_text">只是一个简单的示例。</string>
    <!-- Sample Demo end -->

    <!-- Infinite List start -->
    <string name="infinite_demo_name">无限循环RV</string>
    <string name="infinite_demo_describe">一个真正的无限循环列表，通过RecyclerView的LayoutManager实现。</string>
    <string name="infinite_et_position_hint">滚动到哪儿去？</string>
    <!-- Infinite List end -->

    <!-- Behavior Test start -->
    <string name="behavior_test_demo_name">Behavior</string>
    <string name="behavior_test_describe">使用Behavior改变View大小的练习</string>
    <!-- Behavior Test end -->

    <!-- Blur Image Start -->
    <string name="blur_image_demo_name">毛玻璃</string>
    <string name="blur_image_describe">RenderScript实现毛玻璃效果</string>
    <string name="blur_image_scale_label">Scale</string>
    <string name="blur_image_radius_label">Radius</string>
    <string name="blur_image_alpha_label">Alpha</string>
    <string name="blur_image_red_label">Red</string>
    <string name="blur_image_green_label">Green</string>
    <string name="blur_image_blue_label">Blue</string>
    <string name="blur_image_color_label">Filter Color</string>
    <!-- Blur Image End -->

    <!-- Drag List Start -->
    <string name="drag_list_demo_name">Drag List</string>
    <string name="drag_list_describe">一个可以拖拽移动的分组列表</string>

    <!-- Custom Rating Bar Start -->
    <string name="cus_rating_bar_demo_name">自定义RatingBar</string>
    <string name="cus_rating_bar_describe">一个纯自定义的RatingBar，支持设置星星的间距</string>

    <string name="dag_task_demo_name">DAG Task</string>
    <string name="dag_task_describe">有向无环图+拓扑排序实现任务的异步处理。</string>

    <string name="mem_detector_demo_name">内存监控</string>
    <string name="mem_detector_describe_text">内存监控示例。</string>

    <string name="d_calendar_demo_name">自定义日历</string>
    <string name="d_calendar_describe_text">自定义日历示例。</string>

    <string name="expandable_flow_demo_name">ExpandableFlowLayout</string>
    <string name="expandable_flow_describe_text">可展开FlowLayout</string>

    <string name="stack_card_demo_name">卡片堆叠</string>
    <string name="stack_card_describe_text">RecyclerView实现卡片堆叠示例.</string>
</resources>
