<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewState"
            type="xyz.dean.androiddemos.demos.blur_image.BlurImageViewState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".demos.blur_image.BlurImageActivity">

        <ImageView
            android:id="@+id/origin_iv"
            android:layout_width="287dp"
            android:layout_height="189dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/half_screen_height_guide"
            android:src="@mipmap/img"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blur_iv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="@id/origin_iv"
            app:layout_constraintEnd_toEndOf="@id/origin_iv"
            app:layout_constraintBottom_toBottomOf="@id/origin_iv"
            tools:src="#99AAAAAA"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/scale_label"
            android:text="@string/blur_image_scale_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/origin_iv"
            app:layout_constraintTop_toBottomOf="@id/origin_iv" />

        <SeekBar
            android:id="@+id/scale_sb"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="99"
            android:progress="@{viewState.scaleProgressValue}"
            app:layout_constraintStart_toEndOf="@id/label_barrier"
            app:layout_constraintEnd_toStartOf="@id/scale_value"
            app:layout_constraintTop_toTopOf="@id/scale_label"
            app:layout_constraintBottom_toBottomOf="@id/scale_label" />

        <TextView
            android:id="@+id/scale_value"
            android:text='@{viewState.scale}'
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/scale_label"
            app:layout_constraintBottom_toBottomOf="@id/scale_label"
            app:layout_constraintStart_toEndOf="@id/scale_sb"
            app:layout_constraintEnd_toEndOf="@id/origin_iv"
            tools:text="0.00"/>

        <TextView
            android:id="@+id/radius_label"
            android:text="@string/blur_image_radius_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/origin_iv"
            app:layout_constraintTop_toBottomOf="@id/scale_label" />

        <SeekBar
            android:id="@+id/radius_sb"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="99"
            android:progress="@{viewState.radiusProgressValue}"
            app:layout_constraintStart_toEndOf="@id/label_barrier"
            app:layout_constraintEnd_toEndOf="@id/scale_sb"
            app:layout_constraintTop_toTopOf="@id/radius_label"
            app:layout_constraintBottom_toBottomOf="@id/radius_label" />

        <TextView
            android:id="@+id/radius_value"
            android:text="@{viewState.radius}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@id/radius_label"
            app:layout_constraintBottom_toBottomOf="@id/radius_label"
            app:layout_constraintStart_toEndOf="@id/radius_sb"
            app:layout_constraintEnd_toEndOf="@id/origin_iv"
            tools:text="00.0"/>

        <TextView
            android:id="@+id/alpha_label"
            android:text="@string/blur_image_alpha_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/origin_iv"
            app:layout_constraintTop_toBottomOf="@id/radius_value" />

        <SeekBar
            android:id="@+id/alpha_sb"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="255"
            android:progress="@{viewState.alphaValue}"
            app:layout_constraintStart_toEndOf="@id/label_barrier"
            app:layout_constraintEnd_toEndOf="@id/scale_sb"
            app:layout_constraintTop_toTopOf="@id/alpha_label"
            app:layout_constraintBottom_toBottomOf="@id/alpha_label" />

        <TextView
            android:id="@+id/alpha_value"
            android:text="@{viewState.alpha}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@id/alpha_label"
            app:layout_constraintBottom_toBottomOf="@id/alpha_label"
            app:layout_constraintStart_toEndOf="@id/alpha_sb"
            app:layout_constraintEnd_toEndOf="@id/origin_iv"
            tools:text="000"/>

        <TextView
            android:id="@+id/red_label"
            android:text="@string/blur_image_red_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/origin_iv"
            app:layout_constraintTop_toBottomOf="@id/alpha_label" />

        <SeekBar
            android:id="@+id/red_sb"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="255"
            android:progress="@{viewState.redValue}"
            app:layout_constraintStart_toEndOf="@id/label_barrier"
            app:layout_constraintEnd_toEndOf="@id/scale_sb"
            app:layout_constraintTop_toTopOf="@id/red_label"
            app:layout_constraintBottom_toBottomOf="@id/red_label" />

        <TextView
            android:id="@+id/red_value"
            android:text="@{viewState.red}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@id/red_label"
            app:layout_constraintBottom_toBottomOf="@id/red_label"
            app:layout_constraintStart_toEndOf="@id/red_sb"
            app:layout_constraintEnd_toEndOf="@id/origin_iv"
            tools:text="000"/>

        <TextView
            android:id="@+id/green_label"
            android:text="@string/blur_image_green_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/origin_iv"
            app:layout_constraintTop_toBottomOf="@id/red_label" />

        <SeekBar
            android:id="@+id/green_sb"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="255"
            android:progress="@{viewState.greenValue}"
            app:layout_constraintStart_toEndOf="@id/label_barrier"
            app:layout_constraintEnd_toEndOf="@id/scale_sb"
            app:layout_constraintTop_toTopOf="@id/green_label"
            app:layout_constraintBottom_toBottomOf="@id/green_label" />

        <TextView
            android:id="@+id/green_value"
            android:text="@{viewState.green}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@id/green_label"
            app:layout_constraintBottom_toBottomOf="@id/green_label"
            app:layout_constraintStart_toEndOf="@id/green_sb"
            app:layout_constraintEnd_toEndOf="@id/origin_iv"
            tools:text="000"/>

        <TextView
            android:id="@+id/blue_label"
            android:text="@string/blur_image_blue_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/origin_iv"
            app:layout_constraintTop_toBottomOf="@id/green_label" />

        <SeekBar
            android:id="@+id/blue_sb"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="255"
            android:progress="@{viewState.blueValue}"
            app:layout_constraintStart_toEndOf="@id/label_barrier"
            app:layout_constraintEnd_toEndOf="@id/scale_sb"
            app:layout_constraintTop_toTopOf="@id/blue_label"
            app:layout_constraintBottom_toBottomOf="@id/blue_label" />

        <TextView
            android:id="@+id/blue_value"
            android:text="@{viewState.blue}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@id/blue_label"
            app:layout_constraintBottom_toBottomOf="@id/blue_label"
            app:layout_constraintStart_toEndOf="@id/blue_sb"
            app:layout_constraintEnd_toEndOf="@id/origin_iv"
            tools:text="000"/>

        <TextView
            android:id="@+id/color_label"
            android:text="@string/blur_image_color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/origin_iv"
            app:layout_constraintTop_toBottomOf="@id/blue_label" />

        <TextView
            android:id="@+id/color_value"
            android:text="@{viewState.colorString}"
            android:textColor="@{viewState.color}"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/color_label"
            app:layout_constraintBottom_toBottomOf="@id/color_label"
            app:layout_constraintStart_toEndOf="@id/color_label"
            tools:text="#00ffffff"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/label_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="radius_label,scale_label"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/half_screen_height_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>